--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-.cache/clangd/index
 build
-my-list/a.exe
-my-list/a
-my-list/a.exp
-my-list/a.lib
-my-list/a.pdb
-string-List/a.exe
-cSum/a
-cSum/a.exp
-cSum/a.lib
-cSum/a.pdb
+my-list/a*
+string-List/a*
+cSum/a*
+perf.*
